--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     defaultConfig {
         applicationId "com.cobble.gogs.app"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -61,5 +61,7 @@ dependencies {
 
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
